# nacfahi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  docs.yml  miri.yml  typos.yml
nacfahi/: Cargo.toml
nacfahi-derive/: Cargo.toml
nacfahi-derive/src/: fit_model.rs  lib.rs
nacfahi-tests/: Cargo.toml
nacfahi-tests/src/: lib.rs
nacfahi-tests/tests/: .gitignore  edge_cases.rs  generic_fit.rs  issue1.rs  macro_impl.rs  manual_impl.rs  primitive.rs  utility_models.rs
nacfahi/doc/: as_matrix_view.md  derive_sum.md  fit_macro.md  fit_stat_macro.md  test_model_derivative.md
nacfahi/src/: const_problem.rs  dyn_problem.rs  lib.rs
nacfahi/src/models/: mod.rs
nacfahi/src/models/basic/: constant.rs  exponent.rs  gaussian.rs  linear.rs  mod.rs  polynomial.rs
nacfahi/src/models/basic/constant/: mod.rs  tests.rs
nacfahi/src/models/basic/exponent/: mod.rs  tests.rs
nacfahi/src/models/basic/gaussian/: common.rs  mod.rs
nacfahi/src/models/basic/gaussian/asym/: errors.rs  mod.rs  tests.rs
nacfahi/src/models/basic/gaussian/sym/: errors.rs  mod.rs  tests.rs
nacfahi/src/models/basic/linear/: mod.rs  tests.rs
nacfahi/src/models/basic/polynomial/: mod.rs  tests.rs
nacfahi/src/models/utility/: composition.rs  fixed.rs  mod.rs  model_map.rs  ranged.rs
nacfahi/src/models/utility/composition/: mod.rs  tests.rs
nacfahi/src/models/utility/fixed/: mod.rs
nacfahi/src/models/utility/model_map/: mod.rs  tests.rs
nacfahi/src/models/utility/ranged/: mod.rs  tests.rs
nacfahi/tests/: .gitignore  errors_tests.rs  fit_macro.rs  generic_fit.rs  macro_impl.rs  manual_impl.rs  primitive.rs  tiny_impl.rs  utility_models.rs
