[package]
name = "nacfahi-derive"
version = "0.3.7"
edition = "2024"
authors = ["Diachenko Artem", "Artem 34ty804krytp92e239eku@gmail.com"]
description = "Derive proc-macro for `nacfahi`"
documentation = "https://dzuchun.github.io/nacfahi/nacfahi/index.html"
readme = "../README.md"
repository = "https://github.com/Dzuchun/nacfahi"
license = "MIT"
keywords = ["proc-macro"]
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = {version = "2.0.99", features = ["full"]}

[lints]
workspace = true
