[package]
name = "nacfahi-derive"
version = "0.4.2"
edition = "2024"
authors = ["Diachenko Artem", "Artem 34ty804krytp92e239eku@gmail.com"]
description = "Derive proc-macro for `nacfahi`"
documentation = "https://dzuchun.github.io/nacfahi/nacfahi/index.html"
readme = "../README.md"
repository = "https://github.com/Dzuchun/nacfahi/tree/master/nacfahi-derive"
license = "LGPL-3.0-or-later"
keywords = ["proc-macro"]
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = {version = "2.0.100", features = ["full"]}

[lints]
workspace = true
