[package]
name = "nacfahi"
version = "0.1.0"
edition = "2021"

[dependencies]
generic-array = "1.1.0"
generic_array_storage = { git = "https://github.com/Dzuchun/generic_array_storage.git", tag = "v0.1.1" }
levenberg-marquardt = "0.14.0"
nalgebra = { version = "0.33.2", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.19", default-features = false }
typenum = { version = "1.17.0", features = ["no_std", "const-generics"] }
nacfahi-derive = { path = "../nacfahi-derive" }

[lints]
workspace = true

[dev-dependencies]
approx = "0.5.1"
nalgebra = { version = "0.33.2", features = ["macros"] }
rand = "0.8.5"
static_assertions = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]
