[package]
name = "nacfahi"
version = "0.4.0"
edition = "2021"
authors = ["Diachenko Artem", "Artem 34ty804krytp92e239eku@gmail.com"]
description = "Simpler, but less error-prone API for `levenberg-marquardt` optimization crate"
documentation = "https://dzuchun.github.io/nacfahi/nacfahi/index.html"
readme = "../README.md"
repository = "https://github.com/Dzuchun/nacfahi"
license = "MIT"
keywords = ["api", "no_std", "no-std", "math", "statistics"]
categories = ["mathematics", "no-std"]
exclude = ["tests", "**/tests.rs", "README.md"]

[dependencies]
generic-array = { version = "1.2.0", default-features = false }
generic-array-storage = "0.2.0"
levenberg-marquardt = "0.14.0"
nalgebra = { version = "0.33.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
typenum = { version = "1.17.0", default-features = false, features = ["no_std"] }
nacfahi-derive = "0.3.7"

[features]
alloc = ["nalgebra/alloc"]

[lints]
workspace = true

[dev-dependencies]
approx = "0.5.1"
nalgebra = { version = "0.33.2", features = ["macros"] }
rand = "0.8.5"
static_assertions = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]
