[package]
name = "nacfahi"
version = "0.5.2"
edition = "2024"
authors = ["Diachenko Artem", "Artem 34ty804krytp92e239eku@gmail.com"]
description = "Simpler, but less error-prone API for `levenberg-marquardt` optimization crate"
documentation = "https://dzuchun.github.io/nacfahi/nacfahi/index.html"
readme = "../README.md"
repository = "https://github.com/Dzuchun/nacfahi"
license = "LGPL-3.0-or-later"
keywords = ["api", "no_std", "no-std", "math", "statistics"]
categories = ["mathematics", "no-std"]
exclude = ["README.md"]

[dependencies]
generic-array = { version = "1.2.0", default-features = false }
generic-array-storage = "0.4.0"
levenberg-marquardt = "0.14.0"
nalgebra = { version = "0.33.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
typenum = { version = "1.18.0", default-features = false, features = ["no_std"] }
nacfahi-derive = "0.4.3"
# for local testing
# nacfahi-derive = { path = "../nacfahi-derive" }
simba = { version = "0.9.0", default-features = false, features = [ "libm" ] }
# ^^^ `simba` should still use std implementations, if available
# users can always depend on `simba` directly, and `force-libm`

[features]
default = []
alloc = ["nalgebra/alloc"]

[lints]
workspace = true

[dev-dependencies]
approx = "0.5.1"
nalgebra = { version = "0.33.2", features = ["macros"] }
rand = "0.9.0"
static_assertions = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]
